# kiwiTracer

./: .gitignore  .justfile  CMakeLists.txt  README.md  shell.nix
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt
examples/demo/src/: main.cpp
examples/triangle/: CMakeLists.txt
examples/triangle/src/: main.cpp
include/: color.hpp  ray.hpp  vector.hpp
include/kiwitracer/: image.hpp  kiwitracer.hpp  math.hpp
include/kiwitracer/geometry/: boundingbox.hpp  triangle.hpp  vector.hpp  vertex.hpp
include/kiwitracer/graphics/: color.hpp  image.hpp  stb_image_write.h
src/: main.cpp
tests/: test_library.cpp
